fixed the blurry/bold values in the axis of the performance chart (#2624)

--- a/src/modules/portfolio/components/performance-graph/performance-graph.styles.less
+++ b/src/modules/portfolio/components/performance-graph/performance-graph.styles.less
@@ -12,6 +12,20 @@
         width: 100%;
       }
     }
+
+    .tick {
+      > line {
+        stroke: @color-white;
+      }
+
+      > text {
+        fill: @color-white;
+      }
+    }
+
+    path.domain {
+      stroke: @color-white;
+    }
   }
 }
 
